# rbrt

./: .gitignore  Cargo.toml  README.md
rbrt_lib/: Cargo.toml
rbrt_lib/src/: aabbox.rs  blueprints.rs  cam.rs  dielectric.rs  lambertian.rs  lib.rs  materials.rs  mesh.rs  metal.rs  ray.rs  scene.rs  sphere.rs  triangle.rs  vec3.rs  vec3_avx.rs  vec3_sse.rs
rustracer_lib/: Cargo.toml
rustracer_lib/src/: blueprints.rs  cam.rs  dielectric.rs  lambertian.rs  lib.rs  materials.rs  mesh.rs  mesh_io.rs  metal.rs  ray.rs  sphere.rs  triangle.rs  vec3.rs
scenes/: example_scene.yaml  header_card.yaml
src/: main.rs
