[package]
name = "rustracer"
version = "0.1.0"
authors = ["Stefan Baur <stefan.a.baur@gmail.com>"]
edition = "2019"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
rustracer_lib = {path = "rustracer_lib"}
clap = "2"
image = "0.12"
