[package]                                                                       
name = "rbrt_lib"                                                                  
version = "0.1.0"                                                               
authors = ["Stefan Baur <stefan.a.baur@gmail.com>"]             
edition = "2018"                                                                
                                                                                
                                                                                
[dependencies]
rand = "0.7.0"
image = "0.12"                                                          
rayon = "1.1.0"
tobj = "0.1.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
ord_subset = "3.1.1"