[package]                                                                       
name = "rbrt_lib"                                                                  
version = "0.1.0"                                                               
authors = ["Stefan Baur <stefan.a.baur@gmail.com>"]             
edition = "2018"                                                                
                                                                                
                                                                                
[dependencies]
rand = "0.8.5"
image = "0.25"                                                          
rayon = "1.10.0"
tobj = "4.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
ord_subset = "3.1.1"
